--- a/CBI/samtools/module.lua.tmpl
+++ b/CBI/samtools/module.lua.tmpl
@@ -6,7 +6,8 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing")
-whatis("URL: http://www.htslib.org/")
+whatis("URL: https://www.htslib.org/")
+whatis("GitHub: https://github.com/samtools/bcftools")
 whatis("Description: SAMtools is a suite of programs for interacting with high-throughput sequencing data.  Example: `samtools --version`.")
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
