pindel: workaround compiler error on newer compiles pindel/0.2.4t: can now be installed samtools/0.x.y: install also include/*.{h,c} and lib/libbam.*

--- a/CBI/pindel/module.lua.tmpl
+++ b/CBI/pindel/module.lua.tmpl
@@ -9,7 +9,11 @@ whatis("Keywords: sequencing")
 whatis("URL: https://www.sanger.ac.uk/science/tools/pindel, https://github.com/genome/pindel")
 whatis("Description: Pindel can detect breakpoints of large deletions, medium sized insertions, inversions, tandem duplications and other structural variants at single-based resolution from next-gen sequence data. It uses a pattern growth approach to identify the breakpoints of these variants from paired-end short reads.  Example: `pindel`.")
 
-load("htslib")
+if (version == "0.2.4t") then
+  load("samtools/0.1.18")
+else
+  load("htslib")
+end
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
