--- a/CBI/gatk/module.lua.tmpl
+++ b/CBI/gatk/module.lua.tmpl
@@ -14,6 +14,12 @@ local home = pathJoin(root, name .. "-" .. version)
 
 local version_x = string.gsub(version, "[.].*", "")
 if (version_x == "1") then
+  local cluster = os.getenv("CLUSTER")
+  if (cluster == "tipcc") then
+    load("jdk/1.7.0")
+  else
+    depends_on("openjdk/1.7.0")
+  end
   pushenv("GATK_HOME", home)
 else
   prepend_path("PATH", home)
