--- a/CBI/bedtools2/module.lua.tmpl
+++ b/CBI/bedtools2/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing")
-whatis("URL: https://github.com/arq5x/bedtools2/")
+whatis("URL: https://github.com/arq5x/bedtools2/, https://github.com/arq5x/bedtools2/releases, https://code.google.com/archive/p/bedtools/downloads")
 whatis("Description: Collectively, the bedtools utilities are a swiss-army knife of tools for a wide-range of genomics analysis tasks. The most widely-used tools enable genome arithmetic: that is, set theory on the genome. For example, bedtools allows one to intersect, merge, count, complement, and shuffle genomic intervals from multiple files in widely-used genomic file formats such as BAM, BED, GFF/GTF, VCF. Example: `bedtools --version` and `ls $BEDTOOLS2_HOME/genomes/`.")
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
