--- a/CBI/tiledb/module.lua.tmpl
+++ b/CBI/tiledb/module.lua.tmpl
@@ -12,7 +12,7 @@ whatis("Description: TileDB is a powerful engine for storing and accessing dense
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 
---prepend_path("CPATH", pathJoin(home, "include"))
+prepend_path("CPATH", pathJoin(home, "include"))
 prepend_path("LD_LIBRARY_PATH", pathJoin(home, "lib"))
 prepend_path("PKG_CONFIG_PATH", pathJoin(home, "lib", "pkgconfig"))
 
