--- a/CBI/gcta/module.lua.tmpl
+++ b/CBI/gcta/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: genome")
-whatis("URL: http://cnsgenomics.com/software/gcta/")
+whatis("URL: https://yanglab.westlake.edu.cn/software/gcta/#Overview, https://cnsgenomics.com/software/gcta/")
 whatis("Description: A tool for Genome-wide Complex Trait Analysis (GCTA). Example: `gcta64`.")
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
