scl-devtoolset: Fix URLs and expand on description

--- a/CBI/scl-devtoolset/module.lua.tmpl
+++ b/CBI/scl-devtoolset/module.lua.tmpl
@@ -8,8 +8,8 @@ local scl_name = "devtoolset" .. "-" .. version
 
 whatis("Version: " .. version)
 whatis("Keywords: programming, gcc")
-whatis("URL: https://www.softwarecollections.org/en/scls/rhscl/" .. scl_name .. "/")
-whatis("Description: Enables the CentOS Software Collection (SCL) `" .. scl_name .. "` in the current environment.  This is an alternative to calling `source scl_source enable " .. scl_name .. "`, which is an approach that is not officially supported by RedHat/CentOS.  Example: `gcc --version`.")
+whatis("URL: https://access.redhat.com/documentation/en-us/red_hat_developer_toolset/" .. version)
+whatis("Description: These Developer Toolset provides modern versions of the GNU Compiler Collection, GNU Debugger, and other development, debugging, and performance monitoring tools. Loading these modules enables the corresponding CentOS Software Collection (SCL) `devtoolset-<version>` in the current environment.  This is an alternative to calling `source scl_source enable "devtoolset-<version>"`, which is an approach that is not officially supported by RedHat/CentOS.  Example: `gcc --version`.")
 
 
 require "posix"
