--- a/CBI/rclone/module.lua.tmpl
+++ b/CBI/rclone/module.lua.tmpl
@@ -1,13 +1,15 @@
-help([[
-rclone: Rsync for Cloud Storage and More
-]])
+help("rclone: Rsync for Cloud Storage and More")
 
 local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: files, transfers")
-whatis("URL: https://rclone.org/, https://github.com/rclone/rclone")
-whatis("Description: Rclone is a command line program to sync files and directories to and from a large number of end points on the local file system, or remote file systems, and in the cloud.  Example: `rclone --version`, `rclone --help`, `rclone config`, and `info rclone`. Warning: Only the most recent version of this software will be kept.")
+whatis("URL: https://rclone.org/, https://rclone.org/changelog/ (changelog) https://github.com/rclone/rclone (source code)")
+whatis([[
+Description: Rclone is a command line program to sync files and directories to and from a large number of end points on the local file system, or remote file systems, and in the cloud.
+Example: `rclone --version`, `rclone --help`, `rclone config`, and `info rclone`.
+Warning: Only the most recent version of this software will be kept.
+]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
