Multi-line descriptions + add changelog and source code URLs

--- a/CBI/bamutil/module.lua.tmpl
+++ b/CBI/bamutil/module.lua.tmpl
@@ -6,8 +6,11 @@ local name = "bamUtil"
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: version control")
-whatis("URL: https://genome.sph.umich.edu/wiki/BamUtil, https://github.com/statgen/bamUtil")
-whatis("Description: bamUtil is a repository that contains several programs that perform operations on SAM/BAM files. All of these programs are built into a single executable, `bam`. Example: `bam help`.")
+whatis("URL: https://genome.sph.umich.edu/wiki/BamUtil, https://genome.sph.umich.edu/wiki/BamUtil#Releases (changelog), https://github.com/statgen/bamUtil (source code)")
+whatis([[
+Description: bamUtil is a repository that contains several programs that perform operations on SAM/BAM files. All of these programs are built into a single executable, `bam`.
+Example: `bam help`.
+]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
