--- a/CBI/annovar/module.lua.tmpl
+++ b/CBI/annovar/module.lua.tmpl
@@ -6,8 +6,11 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing, genome")
-whatis("URL: https://annovar.openbioinformatics.org/en/latest/")
-whatis("Description: ANNOVAR is an efficient software tool to utilize update-to-date information to functionally annotate genetic variants detected from diverse genomes (including human genome hg18, hg19, hg38, as well as mouse, worm, fly, yeast and many others). Example: `annotate_variation.pl --help`.")
+whatis("URL: https://annovar.openbioinformatics.org/en/latest/, https://annovar.openbioinformatics.org/en/latest/misc/version_history/ (changelog)")
+whatis([[
+Description: ANNOVAR is an efficient software tool to utilize update-to-date information to functionally annotate genetic variants detected from diverse genomes (including human genome hg18, hg19, hg38, as well as mouse, worm, fly, yeast and many others).
+Example: `annotate_variation.pl --help`.
+]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
