--- a/CBI/apache-ant/module.lua.tmpl
+++ b/CBI/apache-ant/module.lua.tmpl
@@ -6,8 +6,11 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: programming")
-whatis("URL: https://ant.apache.org/bindownload.cgi")
-whatis("Description: Apache Ant is a Java library and command-line tool that help building software.  Example: `ant -h`")
+whatis("URL: https://ant.apache.org/bindownload.cgi, https://ant.apache.org/antnews.html (changelog)")
+whatis([[
+Description: Apache Ant is a Java library and command-line tool that help building software.
+Example: `ant -h`
+]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
