--- a/CBI/clp/module.lua.tmpl
+++ b/CBI/clp/module.lua.tmpl
@@ -7,8 +7,11 @@ name = "Clp"
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: library")
-whatis("URL: https://www.coin-or.org/, https://github.com/coin-or/Clp")
-whatis("Description: Clp (Coin-or linear programming) is an open-source linear programming solver. It is primarily meant to be used as a callable library, but a basic, stand-alone executable version is also available. Examples: `clp`")
+whatis("URL: https://www.coin-or.org/, https://github.com/coin-or/Clp (source code)")
+whatis([[
+Description: Clp (Coin-or linear programming) is an open-source linear programming solver. It is primarily meant to be used as a callable library, but a basic, stand-alone executable version is also available.
+Examples: `clp`
+]])
 
 depends_on("coinutils")
 
