--- a/CBI/bowtie2/module.lua.tmpl
+++ b/CBI/bowtie2/module.lua.tmpl
@@ -6,8 +6,11 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing")
-whatis("URL: http://bowtie-bio.sourceforge.net/bowtie2/index.shtml")
-whatis("Description: Bowtie 2 is an ultrafast and memory-efficient tool for aligning sequencing reads to long reference sequences.  Example: `bowtie2 --version`")
+whatis("URL: http://bowtie-bio.sourceforge.net/bowtie2/index.shtml, http://bowtie-bio.sourceforge.net/bowtie2/index.shtml (changelog), https://github.com/BenLangmead/bowtie2 (source code)")
+whatis([[
+Description: Bowtie 2 is an ultrafast and memory-efficient tool for aligning sequencing reads to long reference sequences.
+Example: `bowtie2 --version`
+]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
