--- a/CBI/fastqc/module.lua.tmpl
+++ b/CBI/fastqc/module.lua.tmpl
@@ -7,7 +7,7 @@ local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing, qc")
 whatis("URL: https://www.bioinformatics.babraham.ac.uk/projects/download.html#fastqc, https://github.com/s-andrews/FastQC/")
-whatis("Description: FastQC is a program designed to spot potential problems in high througput sequencing datasets. It runs a set of analyses on one or more raw sequence files in fastq or bam format and produces a report which summarises the results.  Example: `fastqc --version`.")
+whatis("Description: FastQC is a program designed to spot potential problems in high throughput sequencing datasets. It runs a set of analyses on one or more raw sequence files in fastq or bam format and produces a report which summarises the results.  Example: `fastqc --version`.")
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, "FastQC" .. "-" .. version)
