--- a/CBI/scl-rh-python/module.lua.tmpl
+++ b/CBI/scl-rh-python/module.lua.tmpl
@@ -1,5 +1,5 @@
 help([[
-SCL Python: Python with Additional Utilities via CentOS Software Collections [DEPRECATED]
+SCL Python: Python with Additional Utilities via CentOS Software Collections
 ]])
 
 local name = myModuleName()
