--- a/CBI/expect/module.lua.tmpl
+++ b/CBI/expect/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: programming, R, GUI")
-whatis("URL: https://core.tcl-lang.org/expect/index, https://sourceforge.net/projects/expect/files/Expect/ (download), https://github.com/rstudio/rstudio/ (source code)")
+whatis("URL: https://core.tcl-lang.org/expect/index, https://core.tcl-lang.org/expect/file?name=ChangeLog&ci=tip (changelog), https://sourceforge.net/projects/expect/files/Expect/ (download), https://core.tcl-lang.org/expect/dir?ci=tip (source code)")
 whatis([[
 Description: Expect is a tool for automating interactive applications such as telnet, ftp, passwd, fsck, rlogin, tip, etc. Expect really makes this stuff trivial. Expect is also useful for testing these same applications.
 Example: `expect -version`, and `man expect`.
