--- a/CBI/gatk/module.lua.tmpl
+++ b/CBI/gatk/module.lua.tmpl
@@ -6,8 +6,11 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing, genome")
-whatis("URL: https://software.broadinstitute.org/gatk/, https://github.com/broadinstitute/gatk, https://github.com/broadgsa/gatk, https://console.cloud.google.com/storage/browser/gatk-software/package-archive, ftp://ftp.broadinstitute.org/pub/gsa/GenomeAnalysisTK/")
-whatis("Description: Developed in the Data Sciences Platform at the Broad Institute, the toolkit offers a wide variety of tools with a primary focus on variant discovery and genotyping. Its powerful processing engine and high-performance computing features make it capable of taking on projects of any size.  Example: `gatk --help` and `gatk --list`.")
+whatis("URL: https://software.broadinstitute.org/gatk/, https://github.com/broadinstitute/gatk (source code), https://github.com/broadinstitute/gatk/releases (change log), https://github.com/broadgsa/gatk (legacy), https://console.cloud.google.com/storage/browser/gatk-software/package-archive (legacy), ftp://ftp.broadinstitute.org/pub/gsa/GenomeAnalysisTK/ (legacy)")
+whatis([[
+Description: Developed in the Data Sciences Platform at the Broad Institute, the toolkit offers a wide variety of tools with a primary focus on variant discovery and genotyping. Its powerful processing engine and high-performance computing features make it capable of taking on projects of any size.
+Example: `gatk --help` and `gatk --list`.
+]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
@@ -15,7 +18,7 @@ local home = pathJoin(root, name .. "-" .. version)
 local version_x = string.gsub(version, "[.].*", "")
 if (version_x == "1") then
   -- GATK v1.* requires Java (<= 1.7)
-  local cluster = os.getenv("CLUSTER")
+  local cluster = os.getenv("CLUSTER") or ""
   if (cluster == "tipcc") then
     load("jdk/1.7.0")
   else
@@ -25,5 +28,3 @@ if (version_x == "1") then
 else
   prepend_path("PATH", home)
 end
-
-
