picard: update URLs and depend on openjdk/1.8.0 for Picard (>= 2.0.0)

--- a/CBI/picard/module.lua.tmpl
+++ b/CBI/picard/module.lua.tmpl
@@ -1,25 +1,27 @@
 help([[
-Picard: Command-line tools for Manipulating High-throughput Sequencing Data and Formats
+Picard: Command-Line Tools for Manipulating High-throughput Sequencing Data and Formats
 ]])
 
 local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing")
-whatis("URL: http://broadinstitute.github.io/picard/, https://github.com/broadinstitute/picard")
-whatis("Description: Picard is a set of command line tools for manipulating high-throughput sequencing (HTS) data and formats such as SAM/BAM/CRAM and VCF.  Example: `picard -h`, which is an alias for `java -jar $PICARD_HOME/picard.jar -h`")
+whatis("URL: http://broadinstitute.github.io/picard/, https://github.com/broadinstitute/picard/releases (changelog), https://github.com/broadinstitute/picard (source code)")
+whatis([[
+Description: Picard is a set of command line tools for manipulating high-throughput sequencing (HTS) data and formats such as SAM/BAM/CRAM and VCF.
+Examples: `picard -h`, which is an alias for `java -jar $PICARD_HOME/picard.jar -h`"
+]])
 
 local version_x = string.gsub(version, "[.].*", "")
 if (version_x == "1") then
   -- Pindel 1.64 requires Java (<= 1.6)
-  local cluster = os.getenv("CLUSTER")
   depends_on("openjdk/1.6.0")
+else
+  -- As of version 2.0.1 (Nov. 2015) Picard requires Java 1.8 (jdk8u66)
+  depends_on("openjdk/1.8.0")
 end
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 pushenv("PICARD_HOME", home)
 set_alias("picard", "java -jar " .. pathJoin(home, "picard.jar"))
-
-
-
