gatk: depend on 'java-tweaks', which is a module that makes Java respect TMPDIR

--- a/CBI/gatk/module.lua.tmpl
+++ b/CBI/gatk/module.lua.tmpl
@@ -28,3 +28,6 @@ if (version_x == "1") then
 else
   prepend_path("PATH", home)
 end
+
+-- Tweak Java for the current environment
+depends_on("java-tweaks")
